--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=320" />
-  <title>bbQ</title>
+  <title>Coming Soon!</title>
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
   <div class="gif-container">
-    <img src="images/bbq.svg" alt="bbque food for everyone logo"></img>
+    <img class="logo" src="images/bbq.svg" alt="bbque food for everyone logo"></img>
   </div>
 </body>
+
 </html>
