--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-  <div class="gif-container">
+  <section class="gif-container">
     <img class="logo" src="images/bbq.svg" alt="bbque food for everyone logo"></img>
-  </div>
+  </section>
 </body>
+
 
 </html>
