Add new logo and social media links

--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="styles/main.css" />
+  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  <img class="bbq-image" src="images/bbq.svg" alt="Q - Barbeque Food for everyone" />
+  <main class="main__container">
+    <header>
+      <img class="logo" src="images/theq.png"/>
+      <h2>Food For Everyone</h2>
+    </header>
+    <section class="section">
+        <h3>Find Us!</h3>
+        <a role="button" aria-label="Our Facebook" title="Facebook Page" href="https://www.facebook.com/Q-Food-For-Everyone-860607184067009/">
+          <img class="social-icon bounce" src="images/facebook.svg"/>
+        </a>
+        <a role="button" aria-label="Our Instagram" title="Instagram" href="https://www.instagram.com/qfoodforeveryone/" target="_blank">
+          <img class="social-icon bounce" src="images/instagram.svg"/>
+        </a>
+        <a role="button" aria-label="Our Twitter" title="Twitter" href="#" target="_blank">
+          <img class="social-icon bounce" src="images/twitter.svg"/>
+        </a>
+        <a role="button" aria-label="Contact Us" title="Email" href="mailto:webbejacon@gmail.com" target="_blank">
+          <img class="social-icon bounce" src="images/email.svg"/>
+        </a>
+    </section>
+  </main>
 </body>
 
 </html>
