--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a role="button" aria-label="Our Twitter" title="Twitter" href="#" target="_blank">
           <img class="social-icon bounce" src="images/twitter.svg"/>
         </a>
-        <a role="button" aria-label="Contact Us" title="Email" href="mailto:contact@qfoodforeveryone.com" target="_blank">
+        <a role="button" aria-label="Contact Us" title="Email" href="mailto:contact@qfoodforeveryone.com">
           <img class="social-icon bounce" src="images/email.svg"/>
         </a>
     </section>
