--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <img class="social-icon bounce" src="images/email.svg"/>
         </a>
     </section>
+    <section class="section">
+      <img src="images/menu.jpg"/>
+    </section>
   </main>
 </body>
 
