--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a role="button" aria-label="Our Instagram" title="Instagram" href="https://www.instagram.com/qfoodforeveryone/" target="_blank">
           <img class="social-icon bounce" src="images/instagram.svg"/>
         </a>
-        <a role="button" aria-label="Our Twitter" title="Twitter" href="#" target="_blank">
+        <a role="button" aria-label="Our Twitter" title="Twitter" href="https://twitter.com/qforeveryone" target="_blank">
           <img class="social-icon bounce" src="images/twitter.svg"/>
         </a>
         <a role="button" aria-label="Contact Us" title="Email" href="mailto:contact@qfoodforeveryone.com">
