--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
+  <nav>
+  <a href="#menu"class="menu__link">Menu</a>
+</nav>
   <main class="main__container">
     <header>
-      <img class="logo" src="images/theq.png"/>
+      <img id="logo" class="logo" src="images/theq.png"/>
       <h2>Food For Everyone</h2>
     </header>
     <section class="section">
-        <h3>Find Us!</h3>
         <a role="button" aria-label="Our Facebook" title="Facebook Page" href="https://www.facebook.com/Q-Food-For-Everyone-860607184067009/">
           <img class="social-icon bounce" src="images/facebook.svg"/>
         </a>
@@ -28,10 +30,12 @@
         <a role="button" aria-label="Contact Us" title="Email" href="mailto:contact@qfoodforeveryone.com">
           <img class="social-icon bounce" src="images/email.svg"/>
         </a>
+        <h3>Find Us!</h3>
     </section>
-    <section class="section">
+    <article id="menu" class="menu__container">
       <img src="images/menu.jpg"/>
-    </section>
+    </article>
+    <a class="link" href="#logo">Back to Top</a>
   </main>
 </body>
 
