Add social media image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="styles/main.css" />
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+  <!-- Open Graph Social Images -->
+    <meta property="og:title" content="Q Food For Everyone" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.qfoodforeveryone.com/" />
+    <meta property="og:image" content="https://trailseeksite.files.wordpress.com/2016/06/theq.png" />
+  <!-- End OG -->
 </head>
 
 <body>
